--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li>Ordered list and unordered list is supported.</li>
       <li>Use the toolbar or use markdown syntax like「<b>1. </b>」,「<b>- </b>」or「<b>* </b>」</li>
     </ul>
-    <blockquote>You can quote text by type「<b>&gt;</b>」at line start.</blockquote>
+    <blockquote>You can quote text by type「<b>&gt;&gt;</b>」at line start.</blockquote>
     <p>What about add underline to text? "<u>Stay Hungry, Stay Foolish - <i>Steve Jobs</i></u>".</p>
     <pre>A code block is also support by type 「```」 at line start and press SPACE.</pre>
     <p>For more, please checkout: <a href="https://github.com/sofish/pen#readme" target="_blank">https://github.com/sofish/pen#readme</a></p>
